codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: tui2/src/chatwidget/tests.rs
expression: combined
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
• Viewed Image
  └ example.png
