codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__startup_header_active_cell.snap
---
source: tui2/src/chatwidget/tests.rs
assertion_line: 160
expression: active_blob(&chat)
---
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)              │
│                                       │
│ model:     loading   /model to change │
│ directory: ~/code/codex/codex-rs/tui2 │
╰───────────────────────────────────────╯
