codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__user_shell_ls_output.snap
---
source: tui2/src/chatwidget/tests.rs
expression: blob
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__user_shell_ls_output.snap
---
• You ran ls
  └ file1
    file2
